Spelling fixes and so on

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -314,7 +314,7 @@ delhi.24.d:0 "As we suspected, the [PRF.GetAdjective] forces are too preoccupied
 delhi.24.a:0 "A fait accompli!"
 
 delhi.25.t:0 "War with the British!"
-delhi.25.d:0 "Our war with the British Empire means it is time to cast aside any pretense of allegiance to the British king. We are, after all, no longer a dominion."
+delhi.25.d:0 "Our war with the British Empire means it is time to cast aside any pretence of allegiance to the British king. We are, after all, no longer a dominion."
 delhi.25.a:0 "To the new republic!"
 
 delhi.100.t:0 "The Case of the Princely Armies"
