--- a/localisation/KR_Egypt_l_english.yml
+++ b/localisation/KR_Egypt_l_english.yml
@@ -34,16 +34,10 @@ egy_embargo:0 "Embargo"
 ott_germanaid:0 "German Aid"
 egy_kurds:0 "Axis intervention"
 
-### Tooltips ###
 
 ### Ideas ###
-
 egy_jerusalem_bonus:0 "Treaty of Jerusalem"
 egy_damascus_bonus:0 "Treaty of Damascus"
-
-### Parties ###
-
-### Focuses ###
 
 ### Events ###
 
@@ -52,7 +46,7 @@ egy.1.d:0 "The History of modern Egypt conventionally begins from 1882 when Egyp
 egy.1.a:0 "We shall be the masters of our own destiny!"
 
 egy.2.t:0 "Congress of the Arab World"
-egy.2.d:0 "Originally an idea of Arab nationalists in Egypt, the planned Congress of Arab Nations will be a huge cultural event of great geopolitical and geostrategical importance hosted in Cairo. Professors, clerics, historians, novelists, diplomats and even cooks from all corners of the Arab world are invited to join this tribute to Arab culture. This Congress can improve the economic situation in Cairo and our relations with Arab world, however foreign occupiers of Arab lands might view this as threatening Pan-Arabist propaganda."
+egy.2.d:0 "Originally an idea of Arab nationalists in Egypt, the planned Congress of Arab Nations will be a huge cultural event of great geopolitical and strategic importance hosted in Cairo. Professors, clerics, historians, novelists, diplomats and even cooks from all corners of the Arab world are invited to join this tribute to Arab culture. This Congress can improve the economic situation in Cairo and our relations with Arab world, however foreign occupiers of Arab lands might view this as threatening Pan-Arabist propaganda."
 egy.2.a:0 "Continue preparations for the Congress as planned."
 egy.2.b:0 "These plans are too modest, this must be the event of the century!"
 egy.2.c:0 "Abort the plans, this Congress is a waste of resources!"
@@ -180,12 +174,12 @@ egy.27.d:0 "Our German friends have sent assistance, to maintain our hegemonic p
 egy.27.a:0 "Thousand thanks to the German Kaiser!"
 
 egy.28.t:0 "Ottoman Empire in Disarray"
-egy.28.d:0 "Unable to bear the Ottomans oppression, the National Assembly of Kurdistan has launched an uprising to liberate their homeland. Now that the days of the Ottoman government are numbered, shall we finally realize our long-term plans and liberate occupied Arabian lands or shall we wait for a better time?"
+egy.28.d:0 "Unable to bear the Ottomans oppression, the National Assembly of Kurdistan has launched an uprising to liberate their homeland. Now that the days of the Ottoman government are numbered, shall we finally realise our long-term plans and liberate occupied Arabian lands or shall we wait for a better time?"
 egy.28.a:0 "Declare war on the Ottomans!"
 egy.28.b:0 "We are not ready..."
 
 egy.29.t:0 "Ottoman Empire is isolated"
-egy.29.d:0 "With eruption of the new grand conflict in Europe, German Empire has its hand tied and cant directly interfere in the Middle East. Therefore, Ottoman Empire is isolated and cant rely on intervention of its old ally to save them from inevitable. Now that the days of the Ottoman Empire are numbered, shall we finally realize our long-term plans and liberate occupied Arabian lands or shall we wait for a better time?"
+egy.29.d:0 "With eruption of the new grand conflict in Europe, German Empire has its hand tied and cant directly interfere in the Middle East. Therefore, Ottoman Empire is isolated and cant rely on intervention of its old ally to save them from inevitable. Now that the days of the Ottoman Empire are numbered, shall we finally realise our long-term plans and liberate occupied Arabian lands or shall we wait for a better time?"
 egy.29.a:0 "Declare war on the Ottomans!"
 egy.29.b:0 "We are not ready..."
 
@@ -198,6 +192,6 @@ egy.30.d:0 "The Arabian Bloc has treacherously attacked us. Their declared goal 
 egy.30.a:0 "We shall crush them!"
 
 egy.32.t:0 "Arabian block declares war on the Ottomans!"
-egy.32.d:0 "The recent uprising in Kurdistan is viewed as a sign that the days of the Ottoman Empire are numbered. This event was used by the armed forces of the Arabian bloc, which are steadily advancing into Ottoman territories. Now that the days of the Ottoman Empire are numbered, shall we finally realize our long-term plans and liberate our Shiite brethren or shall we wait for a better time?"
+egy.32.d:0 "The recent uprising in Kurdistan is viewed as a sign that the days of the Ottoman Empire are numbered. This event was used by the armed forces of the Arabian bloc, which are steadily advancing into Ottoman territories. Now that the days of the Ottoman Empire are numbered, shall we finally realise our long-term plans and liberate our Shiite brethren or shall we wait for a better time?"
 egy.32.a:0 "Declare war on the Ottomans!"
 egy.32.b:0 "We are not ready..."
