--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -735,7 +735,7 @@ ott.92.d:0 "Prince Mehmed Sabahaddin, leader of the Liberal Entente, has started
 ott.92.a:0 "Force him into exile!"
 ott.92.b:0 "Let him agitate"
 
-ott.93.t:0 "Organized Opposition"
+ott.93.t:0 "Organised Opposition"
 ott.93.d:0 "Opposition politicians appear to have succeeded in their coordinated efforts to deceive the Ottoman people about our latest leadership reforms, and as a result our popular support is lower than ever..."
 ott.93.a:0 "They will not halt our progress!"
 
@@ -1054,7 +1054,7 @@ ott.162.a:0 "Enforce an embargo!"
 ott.162.b:0 "This means WAR!"
 
 ott.163.t:0 "End of the OPDA"
-ott.163.d:0 "A grand ceremony was held in Kostantiniyye today, as the prestigious public university Mekteb-i Mülkiye-i Şahane officially moved into the building once used as the Headquarters of Ottoman Public Debts Administration. After half a century of humiliation, we have finally broken free of our chains. No longer shall we pay tribute to the European states, and no longer shall we let them dictate our nation's course through history. Since the official dissolvement of OPDA, our treasury has been experiencing a remarkable influx of funds; and numerous projects await our approval."
+ott.163.d:0 "A grand ceremony was held in Kostantiniyye today, as the prestigious public university Mekteb-i Mülkiye-i Şahane officially moved into the building once used as the Headquarters of Ottoman Public Debts Administration. After half a century of humiliation, we have finally broken free of our chains. No longer shall we pay tribute to the European states, and no longer shall we let them dictate our nation's course through history. Since OPDA was officially dissolved, our treasury has been experiencing a remarkable influx of funds; and numerous projects await our approval."
 ott.163.a:0 "Onwards to a new future!"
 
 ott.164.t:0 "The Issue of Yemen"
