--- a/localisation/KR_Turkey_l_english.yml
+++ b/localisation/KR_Turkey_l_english.yml
@@ -4,9 +4,6 @@
 tur_syndie:0 "Syndicalist diplomacy"
 tur_irredentism:0 "Turkish Belligerence"
 tur_peaceful:0 "Peace in the world"
-### Tooltips ###
-
-### Ideas ###
 
 ### Parties ###
 TUR_totalist_party:0 "DHP"
@@ -30,8 +27,6 @@ TUR_paternal_autocrat_party_long:0 "Millî Nizam Partisi"
 TUR_national_populist_party:0 "Bozkurtlar"
 TUR_national_populist_party_long:0 "Bozkurtlar Grubu"
 
-### Focuses ###
-
 ### Events ###
 
 turkey.1.t:0 "Armed Putsch"
@@ -45,9 +40,9 @@ turkey.2.b:0 "Şefik Hüsnü will introduce syndicalism!"
 turkey.2.c:0 "Turkey needs unity and stability"
 
 turkey.3.t:0 "Foreign policy"
-turkey.3.d:0 "With the Turkish people finally free from the opressive rule of the Sultans we can now freely decide our stance towards the international community. While many are arguing for an immediate alliance with other syndicalist nations, it might be wise enough to remain neutral to rebuild our country."
+turkey.3.d:0 "With the Turkish people finally free from the oppressive rule of the Sultans we can now freely decide our stance towards the international community. While many are arguing for an immediate alliance with other syndicalist nations, it might be wise enough to remain neutral to rebuild our country."
 turkey.3.a:0 "We must join arms with France"
-turkey.3.b:0 "Isolationism, we must organize our country"
+turkey.3.b:0 "Isolationism, we must organise our country"
 
 turkey.4.t:0 "Turkey wants to join the Syndicalists"
 turkey.4.d:0 "Republic of Turkey has expressed a desire to join the Syndicalist bloc. It should not be considered a sudden move, as pro-syndicalist policies are popular in many circles including the government and army. Do we want Turkish workers joining the crusade against bloodthirsty Germans and rotten imperialist Canadian pigs?"
