--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -880,24 +880,24 @@ fengtian.new.108.d:0 "INSERT"
 fengtian.new.108.a:0 "Glorious!"
 
 fengtian.new.109.t:0 "Shanhaiguan Uprising Fails"
-fengtian.new.109.d:0 "Before it could ever truly begin, our uprising south of Shanhaiguan was detected and quickly overwhelmed by the local Qing garrison in a short but violent confrontation. While we may encounter some survivors as we push South, we will have no organized assistance from the other side of the Great Wall."
+fengtian.new.109.d:0 "Before it could ever truly begin, our uprising south of Shanhaiguan was detected and quickly overwhelmed by the local Qing garrison in a short but violent confrontation. While we may encounter some survivors as we push South, we will have no organised assistance from the other side of the Great Wall."
 fengtian.new.109.a:0 "Damn"
 
 fengtian.new.110.t:0 "The Gang of Three"
 fengtian.new.110.d:0 "INSERT"
-fengtian.new.110.a:0 "What an embarassment"
+fengtian.new.110.a:0 "What an embarrassment"
 
 fengtian.new.111.t:0 "Mantetsu Bribes"
 fengtian.new.111.d:0 ""
 fengtian.new.111.a:0 "Disgusting"
 
 fengtian.new.112.t:0 "The Anshan Incident"
-fengtian.new.112.d:0 "The iron ore deposits at Anshan have been worked by a Japanese-owned subsidiary of Mantetsu since 1918, known as “Anshan Iron and Steel”, serving as one of Japan’s most valuable sources of steel outside the Home Islands. When the facilities were first constructed most of the ore required little digging, as the deposits lie close to the surface, but as of the current date more extensive excavation is required to continue operations. The company has begun this expansion work without acquiring a lease for the extra land from the local authorities, destroying several farm properties in the process, and despite promises neither compensation nor the lease have been forthcoming. \n\n Protests quickly broke out among local farmers over the issue, and quickly escalated into a riot that severely damaged expensive mining equipment, which our police refused to prevent, citing the technically illegal nature of the operations. On its own initiative, a nearby Japanese garrison from Anshan stepped in, and used lethal force to disperse the riot. This slaughter of our citizens has not gone unnoticed, and existing anti-Japanese sentiment has only been inflamed. The people will hold us accountable in our response, but the deposits and the company working them are essential to Japan’s strategic goals, and our relationship with the Japanese permits little room to maneuver."
+fengtian.new.112.d:0 "The iron ore deposits at Anshan have been worked by a Japanese-owned subsidiary of Mantetsu since 1918, known as “Anshan Iron and Steel”, serving as one of Japan’s most valuable sources of steel outside the Home Islands. When the facilities were first constructed most of the ore required little digging, as the deposits lie close to the surface, but as of the current date more extensive excavation is required to continue operations. The company has begun this expansion work without acquiring a lease for the extra land from the local authorities, destroying several farm properties in the process, and despite promises neither compensation nor the lease have been forthcoming. \n\n Protests quickly broke out among local farmers over the issue, and quickly escalated into a riot that severely damaged expensive mining equipment, which our police refused to prevent, citing the technically illegal nature of the operations. On its own initiative, a nearby Japanese garrison from Anshan stepped in, and used lethal force to disperse the riot. This slaughter of our citizens has not gone unnoticed, and existing anti-Japanese sentiment has only been inflamed. The people will hold us accountable in our response, but the deposits and the company working them are essential to Japan’s strategic goals, and our relationship with the Japanese permits little room to manoeuvre."
 fengtian.new.112.a:0 "Denounce the Japanese"
 fengtian.new.112.b:0 "Stay silent"
 
 fengtian.new.113.t:0 "Japan Denounces Us"
-fengtian.new.113.d:0 "Describing our denouncement of their conduct during the recent Anshan Incident as 'insolent' and 'unbefitting of Japanese generosity', the Japanese government issued a scathing rebuke both publically and through a letter delivered directly by the Japanese Consul General in Mukden. The Kwantung Garrison performed a series of motorized and amored maneuvers in full view of the capital, their message clear. Any escalation of this situation would undoubtedly result in further rebukes to which we can make no meaningful response. "
+fengtian.new.113.d:0 "Describing our denouncement of their conduct during the recent Anshan Incident as 'insolent' and 'unbefitting of Japanese generosity', the Japanese government issued a scathing rebuke both publicly and through a letter delivered directly by the Japanese Consul General in Mukden. The Kwantung Garrison performed a series of motorised and armoured manoeuvres in full view of the capital, their message clear. Any escalation of this situation would undoubtedly result in further rebukes to which we can make no meaningful response. "
 fengtian.new.113.a:0 "If only we did not need them"
 
 fengtian.new.114.t:0 "Imperial Han Society Killings"
