it's von Ungern-Sternberg

--- a/localisation/KR_Ministers_l_english.yml
+++ b/localisation/KR_Ministers_l_english.yml
@@ -33505,7 +33505,7 @@
 	 MON_Nyambuu_sec_npo:0 "Nyambuu"
 	 Nyambuu_dead:0 " is incapable of holding any posts."
 	 Nyambuu_sec_fired:0 " is incapable of holding this post."
-	 MON_Roman_Ungern_von_Sternberg_sec_npo:0 "Roman Ungern von Sternberg"
+	 MON_Roman_Ungern_von_Sternberg_sec_npo:0 "Roman von Ungern-Sternberg"
 	 Roman_Ungern_von_Sternberg_dead:0 " is incapable of holding any posts."
 	 Roman_Ungern_von_Sternberg_sec_fired:0 " is incapable of holding this post."
 
@@ -33581,7 +33581,7 @@
 	 MON_Buma_Tsende_mhc_npo:0 "Buma Tsende"
 	 Buma_Tsende_dead:0 " is incapable of holding any posts."
 	 Buma_Tsende_mhc_fired:0 " is incapable of holding this post."
-	 MON_Roman_Ungern_von_Sternberg_mhc_npo:0 "Roman Ungern von Sternberg"
+	 MON_Roman_Ungern_von_Sternberg_mhc_npo:0 "Roman von Ungern-Sternberg"
 	 Roman_Ungern_von_Sternberg_dead:0 " is incapable of holding any posts."
 	 Roman_Ungern_von_Sternberg_mhc_fired:0 " is incapable of holding this post."
 
