--- a/localisation/KR_Qing_l_english.yml
+++ b/localisation/KR_Qing_l_english.yml
@@ -743,7 +743,7 @@ qing.122.t:0 "The Chinese Flag Flies Over Urga"
 qing.122.d:0 "Our armies defeated the pathetic Sternberg and occupied his lands. Now Mongolia - which was taken by the Russians when the Empire was weak - is ours again!"
 qing.122.a:0 "This is a big day for the Qing Empire!"
 qing.123.t:0 "The fate of Sternberg"
-qing.123.d:0 "While conquering the capital of Mongolia we have captured their leader Roman Ungern von Sternberg. What should we do to him?"
+qing.123.d:0 "While conquering the capital of Mongolia we have captured their leader Roman von Ungern-Sternberg. What should we do to him?"
 qing.123.a:0 "A nice gift for Russia"
 qing.123.b:0 "Hang him high!"
 qing.123.c:0 "Exile that enemy of the Empire"
