--- a/localisation/KR_Russia_Foreign_l_english.yml
+++ b/localisation/KR_Russia_Foreign_l_english.yml
@@ -170,12 +170,12 @@ rusfor.11.c:0 "Attack Japan!"
 rusfor.11.e:0 "Attack the Qing!"
 
 rusfor.12.t:0 "Mongolia attacks Russia!"
-rusfor.12.d:0 "Baron Ungern von Sternberg has decided that it is time to join our war against Russia and has attacked Russian border defences in Siberia. Mongolian diplomats have offered to cooperate in our alliance more formally, can we trust them?"
+rusfor.12.d:0 "Baron von Ungern-Sternberg has decided that it is time to join our war against Russia and has attacked Russian border defences in Siberia. Mongolian diplomats have offered to cooperate in our alliance more formally, can we trust them?"
 rusfor.12.a:0 "Add Mongolia to our alliance."
 rusfor.12.b:0 "No, we cannot trust these treacherous Mongolians!"
 
 rusfor.13.t:0 "Mongolia attacks Japan!"
-rusfor.13.d:0 "Baron Ungern von Sternberg has decided that it is time to join our war against Japan and has attacked Japanese border defences in Manchuria. Mongolian diplomats have offered to cooperate in our alliance more formally, can we trust them?"
+rusfor.13.d:0 "Baron von Ungern-Sternberg has decided that it is time to join our war against Japan and has attacked Japanese border defences in Manchuria. Mongolian diplomats have offered to cooperate in our alliance more formally, can we trust them?"
 rusfor.13.a:0 "Add Mongolia to our alliance."
 rusfor.13.b:0 "No, we cannot trust these treacherous Mongolians!"
 
@@ -405,7 +405,7 @@ ger_germany_invested_threat_entente:0 "Germany invested in our country"
 ger_condemned_us_threat_entente:0 "Germany condemned us"
 
 rusfor.62.t:0 "The Trans-Siberian Crisis"
-rusfor.62.d:0 "Horrible news! A train full of Russian citizens has been massacred by bandits on the Mongolian section of the Trans-Siberian railroad! Our people are shocked by this act of barbarism and demand an immediate response from the government. This could be an opportunity for us to reassert control over the Far Eastern sections of the railroad but we must tread carefully. Baron Ungern von Sternberg, Supreme Khan of All Mongols, is unhinged and may not take kindly to interference."
+rusfor.62.d:0 "Horrible news! A train full of Russian citizens has been massacred by bandits on the Mongolian section of the Trans-Siberian railroad! Our people are shocked by this act of barbarism and demand an immediate response from the government. This could be an opportunity for us to reassert control over the Far Eastern sections of the railroad but we must tread carefully. Baron von Ungern-Sternberg, Supreme Khan of All Mongols, is unhinged and may not take kindly to interference."
 rusfor.62.a:0 "We must increase the security on our trains."
 rusfor.62.b:0 "Demand a formal apology from the Mongolian government!"
 rusfor.62.c:0 "Enough! We demand full sovereignty over OUR Trans-Siberian railway!"
@@ -418,12 +418,12 @@ rusfor.63.b:0 "We cannot be held responsible for the actions of bandits."
 rusfor.63.c:0 "What!? Siberia is ours!"
 
 rusfor.64.t:0 "The Mongolians Apologise"
-rusfor.64.d:0 "Baron Ungern von Sternberg has expressed his deepest personal regret over the murder of our citizens on the Trans-Siberian railroad and has sent condolences and gifts to the families of the bereaved."
+rusfor.64.d:0 "Baron von Ungern-Sternberg has expressed his deepest personal regret over the murder of our citizens on the Trans-Siberian railroad and has sent condolences and gifts to the families of the bereaved."
 rusfor.64.a:0 "That is good."
 rusfor.64.b:0 "Okay, but we shall be watching the railroad in future!"
 
 rusfor.65.t:0 "The Mongolians refuse our request!"
-rusfor.65.d:0 "Baron Ungern von Sternberg has refused to accept any responsibility for the attack on the Trans-Siberian railroad. Our people are shocked and demand immediate response from government!"
+rusfor.65.d:0 "Baron von Ungern-Sternberg has refused to accept any responsibility for the attack on the Trans-Siberian railroad. Our people are shocked and demand immediate response from government!"
 rusfor.65.a:0 "He is right, it was not his fault."
 rusfor.65.b:0 "We shall not forget this!"
 rusfor.65.c:0 "Then it is war!"
@@ -439,7 +439,7 @@ rusfor.67.d:0 "We now have full control over the Trans-Siberian railroad. The wa
 rusfor.67.a:0 "Excellent!"
 
 rusfor.68.t:0 "The Bloody Baron"
-rusfor.68.d:0 "Baron Ungern von Sternberg has given a response to our demands: one hundred ethnic Russians have been executed in Ulaan Baator as a warning for us to not to meddle in Mongolian affairs. He has also asserted Mongolia's historic right to Siberia. How should we react?"
+rusfor.68.d:0 "Baron von Ungern-Sternberg has given a response to our demands: one hundred ethnic Russians have been executed in Ulaan Baator as a warning for us to not to meddle in Mongolian affairs. He has also asserted Mongolia's historic right to Siberia. How should we react?"
 rusfor.68.a:0 "We shall wipe Mongolia from the map!"
 rusfor.68.b:0 "Evacuate all Russian citizens from Mongolia and seal the border."
 
@@ -1336,7 +1336,7 @@ rusfor.1112.b:0 "Who do they think they are? Claim Manchuria too!"
 rusfor.1112.c:0 "Back down, for now..."
 
 rusfor.1113.t:0 "Russia demands Northern Mongolia"
-rusfor.1113.d:0 "Ungern von Sternberg woke up this morning with the news that Russia is demanding Northern Mongolia for themselves. This demand made the baron to fly into a furry but now he calmed down and has to decide how to react. How shall answer this insult?"
+rusfor.1113.d:0 "von Ungern-Sternberg woke up this morning with the news that Russia is demanding Northern Mongolia for themselves. This demand made the baron to fly into a furry but now he calmed down and has to decide how to react. How shall answer this insult?"
 rusfor.1113.a:0 "Bow down to the Russians..."
 rusfor.1113.b:0 "Attack Russia! We will loot Moscow one more time!"
 rusfor.1113.c:0 "Send a written letter to politely refuse their offer."
