--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -58,7 +58,7 @@ worldnews.9.b:0 "The Internationale Congress has many issues to settle."
 worldnews.9.c:0 "We are proud to host the first Internationale Congress!"
 
 worldnews.10.t:0 "Rise of the Mongol Empire"
-worldnews.10.d:0 "News and reliable sources of them are scarce in the vast plains of Mongolia, but it has recently come to light that the Mad Baron of Mongolia, Roman Ungern von Sternberg, has risen to new heights and declared himself to be the successor to Genghis Khan, appropriately named Ungern Khan.\n\nIt is now known what this change will entail, though. The Mongolian army has already defeated the Ma Clique and von Sternberg has declared his right to reign over all Mongolians numerous times before. Experts deny the possibility that the Mongolians could pose a threat to the established powers in the Far East, but the fresh Khan's ambition can only grow higher."
+worldnews.10.d:0 "News and reliable sources of them are scarce in the vast plains of Mongolia, but it has recently come to light that the Mad Baron of Mongolia, Roman von Ungern-Sternberg, has risen to new heights and declared himself to be the successor to Genghis Khan, appropriately named Ungern Khan.\n\nIt is now known what this change will entail, though. The Mongolian army has already defeated the Ma Clique and von Sternberg has declared his right to reign over all Mongolians numerous times before. Experts deny the possibility that the Mongolians could pose a threat to the established powers in the Far East, but the fresh Khan's ambition can only grow higher."
 worldnews.10.a:0 "Ungern Khan? This is completely insane!"
 worldnews.10.b:0 "This Baron is no Khan. Reality will be harsh to him."
 worldnews.10.c:0 "We have left this traitor alone for too long. We must act!"
