--- a/localisation/KR_Loading_Tips_l_english.yml
+++ b/localisation/KR_Loading_Tips_l_english.yml
@@ -39,7 +39,7 @@ LOADING_TIP_36:0 "France has no friends, only interests. \n- Charles de Gaulle"
 LOADING_TIP_37:0 "Yes, it is Europe, from the Atlantic to the Urals, it is Europe, it is the whole of Europe, that will decide the fate of the world. \n- Charles de Gaulle"
 LOADING_TIP_38:0 "Heroes never die - instead they fall, and the soil, by drinking their blood, borns them again... \n- Ioannis Metaxas"
 LOADING_TIP_39:0 "If you don't have ammunition, you still have bayonets. Fix bayonets! \n- Lieutenant Colonel Mustafa Kemal Bey"
-LOADING_TIP_40:0 "My name is surrounded with such hate and fear that no one can judge what is the truth and what is false, what is history and what is myth. \n- Baron Roman Ungern von Sternberg"
+LOADING_TIP_40:0 "My name is surrounded with such hate and fear that no one can judge what is the truth and what is false, what is history and what is myth. \n- Baron Roman von Ungern-Sternberg"
 LOADING_TIP_41:0 "It would appear that we select presidents as we select jurors, on the ground that they have no opinions that can be discovered. \n- Norman Thomas"
 LOADING_TIP_42:0 "Freedom means Freedom for the Group, not Freedom for the Individual. Men must not be slaves to other men, but they must be slaves to their group. \n- Liang Qichao"
 LOADING_TIP_43:0 "When the white man turns tyrant, it is his own freedom that he destroys. He becomes a... posing dummy, the shallow figure of a sahib... He wears a mask, and his face grows to fit it. \n- Eric Blair"
