--- a/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -364,6 +364,11 @@ BEL_Lambert_Chardome_mhc_npo:0 "Lambert Chardome"
 BEL_Raoul_van_Overstraeten_mil_th:0 "Raoul van Overstraeten"
 BEL_karel_jan_bossart:0 "Karel Jan Bossart"
 BEL_Robert_Desmet_mil_th:0 "Robert Desmet"
+FLN_Raoul_van_Overstraeten_mil_th:0 "Raoul van Overstraeten"
+FLN_karel_jan_bossart:0 "Karel Jan Bossart"
+FLN_Robert_Desmet_mil_th:0 "Robert Desmet"
+WLL_Jules_Vincotte_mil_th:0 "Jules Vincotte"
+WLL_Andre_Becquet_mil_th:0 "André Becquet"
 ### Chief of Army ###
 BEL_Victor_van_Strydonck_de_Burkel_carm_sco:0 "Victor van Strydonck" 
 BEL_Edouard_van_den_Bergen_carm_sco:0 "Édouard Van den Bergen"
