Spelling fixes for all!

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -675,7 +675,7 @@ annex.171.d:0 "After a hard campaign throughout the isolated islands of the Aust
 annex.171.a:0 "Liberate an united Australasian confederation"
 annex.171.b:0 "Liberate Australia and New Zealand"
 annex.172.t:0 "Fate of Spanish Morocco"
-annex.172.d:0 "We now control the Spanish parts of Morocco, should we give it to our moroccan puppet or keep it for ourselves?"
+annex.172.d:0 "We now control the Spanish parts of Morocco, should we give it to our Moroccan puppet or keep it for ourselves?"
 annex.172.a:0 "Transfer it to our Moroccan puppet"
 annex.172.b:0 "Transfer it to our Spanish puppet"
 annex.173.t:0 "Fate of German Somaliland"
@@ -702,7 +702,7 @@ annex.177.d:0 "After our successful campaign in the steppes of Mongolia and beat
 annex.177.a:0 "Continue with military occupation!"
 annex.177.b:0 "Hand these territories to our loyal ally..."
 annex.177.c:0 "Liberate a loyal Mongolia"
-annex.177.e:0 "Return the Transsiberian to Russia and liberate Mongolia"
+annex.177.e:0 "Return the Trans-Siberian to Russia and liberate Mongolia"
 annex.178.t:0 "Fate of Manchuria"
 annex.178.d:0 "After our successful campaign in Manchuria we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
 annex.178.a:0 "Continue with military occupation!"
