--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -376,7 +376,7 @@ CSA_philippinian_support_desc:0 "We should help our Filipino Comrades now that w
 CSA_plan_purple:0 "Plan Purple"
 CSA_plan_purple_desc:0 "The Purple plan is a set of military intervention plans for the general region of Latin America. We shall use this to help re-establish Pax American over Latin America and support our comrades to the south."
 CSA_cuban_intervnetion:0 "Cuban Intervention"
-CSA_cuban_intervnetion_desc:0 "The people of Cuba are languishing under the Captialist Oppression. We should go and help liberate them from their oppression."
+CSA_cuban_intervnetion_desc:0 "The people of Cuba are languishing under the Capitalist Oppression. We should go and help liberate them from their oppression."
 CSA_help_bolivia:0 "Help Bolivia"
 CSA_help_bolivia_desc:0 "Bolivia is a fellow Syndicalist country in the south. We should help them spread syndicalism in the Andes."
 CSA_intervene_chile:0 "Intervene in Chile"
