--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -825,7 +825,7 @@ pasha_liman_kantjerin:0 "Pasha Liman Kantjerin"
 albatros_albania:0 "Albatros Albania"
 arsenal_ushtria_tirane:0 "Arsenal Ushtria Tiranë"
 
-### Allgemeine_Ostasiatische_Gesellschaft ###
+### Allgemeine Ostasiatische Gesellschaft ###
 siemens_ostasien:0 "Siemens Ostasien"
 aog_academia_sinica:0 "Academia Sinica"
 bayer_ostasien:0 "Bayer AG Ostasien"
@@ -875,7 +875,7 @@ Kaiserliche_werft_wilhelmshaven:0 "Kaiserliche Werft Wilhelmshaven"
 schichau_werke:0 "Schichau-Werke"
 vulcan_stettin:0 "AG Vulcan Stettin"
 
-###Flanders-wallonia ###
+### Flanders-Wallonia ###
 cockerill:0 "Cockerill"
 societe_belge_radio:0 "Société Belge Radio-électrique"
 solvay:0 "Solvay"
@@ -896,7 +896,7 @@ brossel:0 "Brossel"
 miesse:0 "Miesse"
 cockerill_scheepwerfen:0 "Cockerill Scheepwerfen"
 
-###Wallonia ###
+### Wallonia ###
 cockerill_WLL:0 "Cockerill"
 acec_WLL:0 "Ateliers de Constructions Électriques de Charleroi"
 societe_belge_radio_WLL:0 "Société Belge Radio-électrique"
@@ -909,7 +909,7 @@ la_brugeoise:0 "La Brugeoise"
 avions_fairey_WLL:0 "Avions Fairey"
 sabca_WLL:0 "SABCA"
 
-###Flanders ###
+### Flanders ###
 solvay_FLN:0 "Solvay"
 renard_FLN:0 "Renard"
 stampe_vertongen_FLN:0 "Stampe et Vertongen"
