--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -451,7 +451,7 @@ UKR_Massive_inf2_desc:0 "We have already spent a lot of time to create the equip
 UKR_Massive_doct:0 "Idea for the soldiers"
 UKR_Massive_doct_desc:0 "We have many soldiers and many rifles. Someone can say that such an army is weaker than the army with the tanks and artillery, but we will definitely find out, how this army can be used at the struggle with our enemies."
 UKR_New_Army_UKR:0 "Army is reorganised"
-UKR_New_Army_UKR_desc:0 "Finally the army of Ukraine was reorganised by the Ministry of defence and our General Stsff. It seems that the army, which had been formed after 1918 to maintain the independence of Ukraine finally got its new appearance."
+UKR_New_Army_UKR_desc:0 "Finally the army of Ukraine was reorganised by the Ministry of defence and our General Staff. It seems that the army, which had been formed after 1918 to maintain the independence of Ukraine finally got its new appearance."
 
 UKR_Newforpol:0 "New foreign policy"
 UKR_Newforpol_desc:0 "-"
