--- a/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -550,7 +550,7 @@ beng.112.t:0 "[From.GetName] Has Refused"
 beng.112.d:0 "The [From.GetAdjective] government has sent word that the International has no need of our alliance."
 beng.112.a:0 "Is that so?"
 beng.113.t:0 "The Case of the Delhi Government's Officer Corps"
-beng.113.d:0 "The National Government has finally dislodged the last vestiges of British influence on the Indian sub-continent and enforced a truly native system of governance on the troublesome north-western provinces. Some of the officers who once swore loyalty to the Delhi Government have expressed wishes to continue to serve Mother India, placing the nation above political alignment. However, if we enroll these men we might face trouble from our own officers who resent serving alongside former enemies."
+beng.113.d:0 "The National Government has finally dislodged the last vestiges of British influence on the Indian sub-continent and enforced a truly native system of governance on the troublesome north-western provinces. Some of the officers who once swore loyalty to the Delhi Government have expressed wishes to continue to serve Mother India, placing the nation above political alignment. However, if we enrol these men we might face trouble from our own officers who resent serving alongside former enemies."
 beng.113.a:0 "The Nation needs every single man!"
 beng.113.b:0 "We have no need for British lapdogs!"
 beng.114.t:0 "Integration in the Gangetic Plain"
