ECU loc + HUE fixes

--- a/localisation/KR_Brazil_l_english.yml
+++ b/localisation/KR_Brazil_l_english.yml
@@ -26,6 +26,8 @@ BRA_taxing_church_property:0 "Taxing church property"
 PATRIANOVISTA:0 "Patrianovistas"
 BRA_MON_party:0 "AIB-AIPB"
 BRA_MON_party_long:0 "Coalizão Integralista Imperial Brasileira"
+BRA_ARG_party:0 "JTB"
+BRA_ARG_party_long:0 "Junta de Transição Brasileira"
 
 ### Focuses ###
 BRA_black_monday:0 "Lessons of Black Monday"
