--- a/localisation/KR_Ecuador_l_english.yml
+++ b/localisation/KR_Ecuador_l_english.yml
@@ -8,7 +8,7 @@ ECUestadodeex_desc:0 "Extraordinary problems require extraordinary solutions"
 ECUpurge:0 "Syndicalist Purge"
 ECUpurge_desc:0 "Even in these delicate times traitors try to start strikes and similar treasonous concepts. We will put a stop to it"
 ECUintervention:0 "State Interventionism"
-ECUintervention:0 "It's not planned economy, we are just giving the Invisible Hand a small nudge"
+ECUintervention_desc:0 "It's not planned economy, we are just giving the Invisible Hand a small nudge"
 ECU_inthecriminaljusticesystem:0 "Reformed Legal System"
 ECU_inthecriminaljusticesystem_desc:0 "A highly modern and liberalised legal system has been put in place, ensuring the common folk we have their interest at heart"
 ECUkeikaku:0 "Military Planning"
@@ -45,25 +45,63 @@ ECU_totalist_party_long:0 "Movimento Maximista Ecuatoriano"
 ECU_blackmondaycrisis:0 "The Thursday Crisis"
 ECU_blackmondaycrisis_desc:0 "Deep crisis takes a hold of our nation..."
 ECU_gallo:0 "Gallo Steps In"
+ECU_gallo_desc:0 "General Gallo has stepped in to ensure our nation's economy recovers and that our borders are safe
 ECU_stateofexecao:0 "State of Exception"
+ECU_stateofexecao_desc:0 "Extraordinary problems demand extraordinary solutions. Our nation is in the brink of falling to Syndicalists, and only a firm hand will keep our families and faith safe"
 ECU_isidrogone:0 "Deal with Isidro"
+ECU_isidrogone_desc:0 "Isidro Ayora and other liberal opportunists must be dealt with swiftly if Ecuador is to survive as a nation. The time for talking is over!"
 ECU_loyalty:0 "Deal with Fifth Columinists"
+ECU_loyalty_desc:0 "Many of our army officers still cling to the idea that our government is illegimate. We must not let that stand!"
 ECU_gommiegone:0 "Syndicalist Purge"
+ECU_gommiegone_desc:0 "Many young men and women believe the lies of the internationalists, and their denial of basic human nature can be tempting to impressionable youngsters. Even worse, the good, hardworking natives are also listening to French drivel. We must act now if we are to safeguard the future of our nation"
 ECU_bossgallo:0 "Solidify the Junta"
+ECU_bossgallo_desc:0 "Our hold on the government will not be as fleeting as anticipated, and thus we must adapt the government to ensure future stability"
 ECU_gallo3:0 "End the Chaos"
+ECU_gallo3_desc:0 "The Republic's Reorganization processes is complete, and our borders and economy are now safer than ever before! Viva Gallo, Viva Ecuador!"
 ECU_isidro:0 "Liberal Takeover"
+ECU_isidro_desc:0 "The elections have shown the will of the people, the Partido Liberal Radical will now rule Ecuador to a brighter future!"
 ECU_isidro2:0 "Isidro Takes the Reins of Government"
+ECU_isidro2_desc:0 "Isidro Ayora knows what is best for our nation, and how to deal with the crisis we are in. That's what the flyers will say, at least!"
 ECU_isidro3:0 "Liberal Hegemony"
+ECU_isidro3_desc:0 "The PLR has gained enough political capital for decades! With the back of the conservatives crushed, the long struggle between us has finally come to an end"
 ECU_legalfacade:0 "Legal Facade"
+ECU_legalfacade_desc:0 "Some of the laws we need to get the nation back on track are technically unconstitutional. But need not worry, we will make it legal"
 ECU_national_optimism:0 "National Optimism"
+ECU_national_optimism_desc:0 "A change in management can often do much for economic recovery, even as a placebo; even if our governmen did nothing, the fact that we are not La Agrolla already places renewed faith and growth in the economy"
 ECU_recovery:0 "Economical Recovery"
+ECU_recovery_desc:0 ""
 ECU_stabilizationeffort:0 "Stabilisation Effort"
+ECU_stabilizationeffort_desc:0 "Much of the past political chaos is over; conservatives hide, knowing they are nothing; and the discredited Syndicalists cannot do anything that even remotely threatens our hegemony. A newfound sense of peace has finally settled in"
 ECU_justice:0 "Modernise Penal Code"
+ECU_justice_desc:0 "A modern, model penal code that no longer serves as a front for Conservative landgrabs should be among our top priorities"
 ECU_army:0 "Military Modernisation"
+ECU_army_desc:0 "Our armed forces are clearly not up to the task of defending our borders, we must act and change this"
+ECU_army2_desc:0 "Our military production can only be increased if our army is well supplied enough; we might not be an industrial behemoth, but we should be able to improve the situation of army arsenals"
+ECU_army3_desc:0 "With the existing arsenals mordernizes, its time we build a new and improved one; which will supply our army with much needed military goods"
+ECU_army4_desc:0 "Our grand strategy is a mess, with various generals pushing for their each individual doctrines. Let us harmonize the cacophony of different ideas into on cohesive vision for our general staff"
 ECU_army2:0 "Maintenance Effort"
 ECU_army3:0 "Renewal Effort"
 ECU_army4:0 "Planning Focus"
 ECU_offense:0 "Offensive Planning"
+ECU_offense_desc:0 "We must not only wait for Peru to attack us, but be ready to make our own offensive and cripple the invaders as swiftly as possible"
+ECU_commando_desc:0 "Speicalizes, well trained brigades will fufill special roles in our defense, but for that to happen, much expenditure will be needed, and special brigades need special equipment too"
+ECU_trenchperimeters_desc:0 "Our artillery pieces are old, borderline useless; we should strive to aquire modern ones and improve the situation of our brigades that currently are lacking in heavy firepower"
+ECU_tothelastman_desc:0 "If all else fails, we must be ready to defend Quito and our very independence to the last man!"
+ECU_navy_desc:0 "Our navy is small, but it can be effective and well prepared to fufill a much needed role of support"
+ECU_yards_desc:0 "We must ensure we can repair and rebuild our warships, and invest in building more if the need arises"
+ECU_destroya_desc:0 "Our shipping lanes could find themselves under threat from enemy submarines, which could starve our nation of vital resources and good. Anti Submarine ships are to be depolyed alongside convoys"
+ECU_subs_desc:0 "We can work around the relative small size of our navy by ensuring our submarines can keep our enemies busy and running in circles; we might need newer models for this however"
+ECU_blockade_desc:0 "We can set up a network of sumbarine raiders to ensure that any attack against our soverignty will be paid on the seas with interest"
+ECU_bombem_desc:0 "Our airforce expansion plans will now be shifter towards bomber craft, that can actively have an impact on the ground"
+ECU_aero_desc:0 "Aerial war has only become more vital in the past years, and yet there is little we have done for our airforce besides token purchases. We will begin a renewal effort, prioritizng aerial superiority"
+ECU_poltechsloty_desc:0 "With peace finally reaching our nation, our intellectuals and scientists can truly start working for the betterment of the nation"
+ECU_emergencyfactorysiezure_desc:0 "With the danger of war looming, we must ensure that we have legal ways to get our armies well supplied and equipped"
+ECU_ecuatorianrubberboom2_desc:0 "Our domestic industry is diminute and destitute, and it might need several incentvies to kickstart. The rewards will be mostly on the longterm, however"
+ECU_ecuatorianrubberboom_desc:0 "Pastanza has been having something of a rubber boom in the past decade. Now we need to ensure not only that production increases, but also that our army gets the lion's share of it!"
+ECU_stateovertures_desc:0 "It's not planned economy, we are just giving the Invisible Hand a small nudge"
+ECU_stateovertures2_desc:0 "Expanding the industrial capacity of our nation, especially when it comes to construction, is a vital part of any recovery effort. We will ensure that the state can finance public works in many areas, and thus help the economy in the long run"
+ECU_econ:0 "We must make an active effort to intervene in the economic chaos of our country, even if that means burning precious political capital"
+ECU_infrastructure:0 "One of the most important roles of the state is providing infrastructure, the aspects of a market where selfish agents will not invest in, but are vital for it's work. With the small added benefit of greatly impving army supply lines, of course"
 ECU_commando:0 "Special Forces"
 ECU_trenchperimeters:0 "Weltkrieg Artillery Tactics"
 ECU_tothelastman:0 "Quito Perimiter"
