--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -228,10 +228,10 @@ massawa_naval_yard:0 "Massawa Naval Yard"
 mogadishu_naval_yard:0 "Mogadishu Naval Yard"
 
 ### Fengtian ###
-manchurian_heavy_industries:0 "Manchurian Heavy Industries"
+mantetsu_industrial_subsiduaries:0 "Mantetsu Industrial Subsiduaries"
 mudken_arsenal:0 "Mudken Arsenal"
 nissan_dowa_automobile:0 "Nissan-Dōwa Automobile Company"
-south_manchuria_railway:0 "South Manchuria Railway Co."
+mitsubishi_heavy_industries:0 "Mitsubishi Heavy Industries"
 manchuria_airplane_company:0 "Manchuria Airplane Manufacturing Company"
 manchuria_aviation_company:0 "Manchuria Aviation Company"
 
