--- a/localisation/KR_Theorists_l_english.yml
+++ b/localisation/KR_Theorists_l_english.yml
@@ -79,3 +79,13 @@ mustafa_kemal_pasha:0 "Mustafa Kemal Paşa"
 fahrettin_pasha:0 "Fahrettin Paşa"
 santuri_mustafa_bey:0 "Santuri Mustafa Bey"
 osman_besim_bey:0 "Osman Besim Bey"
+
+## Flanders-Wallonia, Flanders and Wallonia####
+BEL_Raoul_van_Overstraeten_mil_th:0 "Raoul van Overstraeten"
+BEL_karel_jan_bossart:0 "Karel Jan Bossart"
+BEL_Robert_Desmet_mil_th:0 "Robert Desmet"
+FLN_Raoul_van_Overstraeten_mil_th:0 "Raoul van Overstraeten"
+FLN_karel_jan_bossart:0 "Karel Jan Bossart"
+FLN_Robert_Desmet_mil_th:0 "Robert Desmet"
+WLL_Jules_Vincotte_mil_th:0 "Jules Vincotte"
+WLL_Andre_Becquet_mil_th:0 "André Becquet"
