missing manufacturer name

--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -920,6 +920,7 @@ forges_de_zeebruges_FLN:0 "Zeebrugge Smederijen"
 brossel_FLN:0 "Brossel"
 miesse_FLN:0 "Miesse"
 cockerill_scheepwerfen_FLN:0 "Cockerill Scheepwerfen"
+la_brugeoise_FLN:0 "La Brugeoise"
 
 ### Serbia ###
 sartid:0 "SARTID"
