Leaving notes here for later

--- a/localisation/KR_Political_l_english.yml
+++ b/localisation/KR_Political_l_english.yml
@@ -30,13 +30,13 @@ very_high_popularity_desc:0 "You'll be at Very High Popularity if your ruling pa
 popularity:0 "Popularity"
 
 ### Economic Health ###
-boom_economy:0 "WIP"
-good_economy:0 "WIP"
-medium_economy:0 "WIP"
-bad_economy:0 "WIP"
-bust_economy:0 "WIP"
-crash_economy:0 "WIP"
-economic_health:0 "WIP, Don't worry about that"
+boom_economy:0 "WIP" #"Boom Economy WIP!!!"
+good_economy:0 "WIP" #"Good Economy WIP!!!"
+medium_economy:0 "WIP" #"Medium Economy WIP!!!"
+bad_economy:0 "WIP" #"Bad Economy WIP!!!"
+bust_economy:0 "WIP" #"Bust Economy WIP!!!"
+crash_economy:0 "WIP" #"Crash Economy WIP!!!"
+economic_health:0 "WIP, Don't worry about that" #"Economic Health WIP!!!"
 
 ### Stability Events ###
 kr.political.1.t:0 "Downfall in Stability!"
