--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -473,9 +473,9 @@ UKR_Fra_alliance:0 "Syndicalist unity"
 UKR_Fra_alliance_desc:0 "With Ukraine finally free from German capitalist oppression we can now freely decide our stance towards the international community. The immediate alliance with other Syndicalist nations can be very profitable for us and will finally secure Ukraine from the aggressive of the Germans, who doesn't want just forget about the fail of their puppet king. We should ask France for an alliance."
 UKR_Fra_claims:0 "Red Liberation"
 UKR_Fra_claims_desc:0 "Lots of the Ukrainian lands are still under control of the various regimes, which don't always respect all the rights of the Ukrainians their countries. If we want to strengthen the friendship of the nations as well as to secure the right of the self-determination of the Ukrainians, we should claim borderlands and hope that one day we will take them back."
-UKR_RUS_friendship:0 "Great Union"
+UKR_RUS_friendship:0 "Northern Wind"
 UKR_RUS_friendship_desc:0 "-"
-UKR_RUS_Officers:0 "Northern Wind"
-UKR_RUS_Officers_desc:0 "-"
+UKR_RUS_Bessarabia:0 "Bessarabian question"
+UKR_RUS_Bessarabia_desc:0 "-"
 UKR_RUS_Galicia:0 "Galician question"
 UKR_RUS_Galicia_desc:0 "-"
